# 9x

./: .bochsrc  .clang-format  .gitignore  GNUmakefile.in  LICENSE  Makefile  Makefile.in  README  README.md  autogen.sh  bootstrap  config.h.in  configure.ac  version.sh
arch/x86_64/: apic.c  arch.c  cpu.c  hat.c  helpers.asm  irq.c  kernel.ld  smp.c  smp_trampoline.real  syscall.asm  tables.c  timer.c
arch/x86_64/include/arch/: apic.h  arch.h  asm.h  cpu.h  cpuid.h  hat.h  ic.h  irq.h  irqchip.h  smp.h  tables.h  timer.h
extensions/: build.mk
extensions/serial/: build.mk  main.c  rs232.c  serial_priv.h
include/: vm.h
include/9x/: acpi.h  vfs.h  vm.h
include/arch/: cpu.h  trap.h
include/arch/aarch64/: cpu.h  pmap.h  trap.h
include/arch/x86_64/: cpu.h  pmap.h  trap.h
include/dev/: console.h
include/fs/: backing.h  devtmpfs.h  handle.h  vfs.h
include/generic/: proc.h  sched.h  smp.h
include/internal/: asm.h  cpuid.h  posix.h  ssfn.h  stivale2.h
include/lib/: builtin.h  cmdline.h  console.h  elf.h  errno.h  htab.h  kcon.h  libc.h  lock.h  log.h  panic.h  posix.h  print.h  queue.h  ssfn.h  stivale2.h  tlsf.h  types.h  vec.h
include/lvm/: lvm.h  lvm_page.h  lvm_space.h
include/misc/: asan.h  nanoprintf.h  stivale2.h
include/ninex/: acpi.h  condvar.h  console.h  extension.h  init.h  irq.h  proc.h  sched.h  smp.h  syscall.h  tty.h
include/proc/: proc.h  sched.h  smp.h
include/sys/: apic.h  cpu.h  hat.h  irq.h  tables.h  timer.h
include/vm/: phys.h  seg.h  virt.h  vm.h
misc/: config.h.in  kernel.ld  limine.cfg
root/: limine.cfg
scripts/: image_tool.sh  run_vm.sh
share/: limine.cfg
src/: build.mk
src/arch/aarch64/: cpu.c  kernel.ld  pmap.c  stubs.S  trap.c
src/arch/x86_64/: apic.c  cpu.c  font.asm  hat.c  helpers.asm  irq.c  kernel.ld  pmap.c  stubs.S  syscall.asm  tables.c  timer.c  trap.c
src/arch/x86_64/include/arch/: apic.h  asm.h  cpu.h  hat.h  tables.h
src/dev/: console.c
src/fs/: backing.c  devtmpfs.c  handle.c  initramfs.c  tmpfs.c  vfs.c
src/fs/streams/: random.c  unix.c
src/fs/unix/: devtmpfs.c  initramfs.c  tmpfs.c
src/generic/: acpi.c  acpi_lai.c  kern.c  proc.c  sched.c  smp.c
src/kern/: acpi.c  acpi_lai.c  condvar.c  console.c  extension.c  init.c  irq.c  kasan.c  kern.c  proc.c  sched.c  smp.c  syscall.c  tty.c  vfs.c  vm.c  vm_phys.c  vm_virt.c
src/lib/: builtin.c  cmdline.c  console.c  font.asm  htab.c  kcon.c  libc.c  log.c  panic.c  print.c  strace.c  string.c  tlsf.c  ubsan.c  vec.c
src/lvm/: lvm_alloc.c  lvm_init.c  lvm_page.c  lvm_space.c
src/proc/: proc.c  sched.c  smp.c
src/sys/: apic.c  cpu.c  gdt.c  hat.c  helpers.asm  idt.c  irq.c  spinlock.asm  tables.c  timer.c
src/vm/: alloc.c  cache.c  phys.c  virt.c  vm.c
src/vm/phys/: phys.c  zone.c
src/vm/virt/: invl.c  seg.c  virt.c
tools/: clang_format.py  mkinitrd.py  symbols.sh
